Changes to get compliance with Google Drive policies.
In particular, the homepage needs more of an explanation of the app, the privacy
policy needs a section on what happens with user data.

--- a/src/components/Landing/stylesheet.css
+++ b/src/components/Landing/stylesheet.css
@@ -59,6 +59,11 @@ footer a {
   text-align: center;
 }
 
+.landing-description {
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
 .landing-logo {
   height: 7em;
 }
