--- a/src/components/Landing/stylesheet.css
+++ b/src/components/Landing/stylesheet.css
@@ -1,13 +1,10 @@
 @import '../../colors.css';
 
 footer {
-  position: relative;
-  right: 0;
-  bottom: 0;
-  left: 0;
+  flex-shrink: 0;
   padding: 1rem;
-  margin-top: 1rem;
   background-color: var(--base2);
+  margin-top: 20px;
   text-align: center;
 }
 
@@ -18,14 +15,14 @@ footer a {
 .landing-container-wrapper {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: 100vh;
 }
 
 .landing-container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  flex: 1;
+  flex: 1 0 auto;
 }
 
 .landing-container a {
