--- a/src/colors.css
+++ b/src/colors.css
@@ -7,6 +7,7 @@
   --base01:     #586e75;
   --base00:     #657b83;
   --base0:      #839496;
+  --base0-soft: rgba(131, 148, 150, 0.75);
   --base1:      #93a1a1;
   --base1-soft: rgba(147, 161, 161, 0.4);
   --base2:      #eee8d5;
