--- a/src/components/OrgFile/components/ActionDrawer/stylesheet.css
+++ b/src/components/OrgFile/components/ActionDrawer/stylesheet.css
@@ -14,7 +14,7 @@
 
 .action-drawer__btn {
   outline: 0;
-  box-shadow: 2px 2px 5px 0px rgba(148, 148, 148, 0.75);
+  box-shadow: 2px 2px 5px 0px var(--base0-soft);
 
   position: relative;
 
