--- a/src/components/OrgFile/components/CaptureModal/stylesheet.css
+++ b/src/components/OrgFile/components/CaptureModal/stylesheet.css
@@ -7,7 +7,7 @@
 
 .capture-modal-header-path {
   font-family: Courier;
-  color: gray;
+  color: var(--base0);
 
   margin-top: 5px;
 }
@@ -49,7 +49,7 @@
 }
 
 .capture-modal-error-message {
-  color: red;
+  color: var(--red);
 
   text-align: center;
 
