--- a/src/components/OrgFile/components/HeaderContent/stylesheet.css
+++ b/src/components/OrgFile/components/HeaderContent/stylesheet.css
@@ -14,7 +14,7 @@
 }
 
 .header-content__insert-timestamp-button {
-  color: gray;
+  color: var(--base0);
 
   display: flex;
   align-items: center;
