--- a/src/components/OrgFile/components/TitleLine/stylesheet.css
+++ b/src/components/OrgFile/components/TitleLine/stylesheet.css
@@ -16,7 +16,7 @@
 }
 
 .todo-keyword--done-state {
-  color: green;
+  color: var(--green);
 }
 
 .todo-keyword--none {
@@ -40,7 +40,7 @@
 }
 
 .title-line__insert-timestamp-button {
-  color: gray;
+  color: var(--base0);
 
   font-family: Courier;
 
