--- a/src/components/UI/TabButtons/stylesheet.css
+++ b/src/components/UI/TabButtons/stylesheet.css
@@ -1,7 +1,7 @@
 @import '../../../colors.css';
 
 .tab-buttons {
-  border: 1px solid #d8d8d8;
+  border: 1px solid var(--base3);
   height: 34px;
   box-sizing: border-box;
   display: inline-flex;
