--- a/src/colors.css
+++ b/src/colors.css
@@ -5,7 +5,9 @@
   --base03:     #002b36;
   --base02:     #073642;
   --base01:     #586e75;
+  --base01-soft: rgba(88, 110, 117, 0.4);
   --base00:     #657b83;
+  --base00-soft: rgba(101, 123, 131, 0.75);
   --base0:      #839496;
   --base0-soft: rgba(131, 148, 150, 0.75);
   --base1:      #93a1a1;
