improve header stickiness for gooder

--- a/src/base.css
+++ b/src/base.css
@@ -24,13 +24,15 @@
   }
 }
 
+body, .App {
+  height: 100%;
+}
+
 html,
 body,
 #root {
   color: var(--base00);
   background: var(--base3);
-  height: 100%;
-  overflow-y: hidden;
 }
 
 a {
