--- a/src/components/Entry/stylesheet.css
+++ b/src/components/Entry/stylesheet.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-
+  min-height: calc(100vh - 30px); /* 30px for the header bar */
   overflow-x: hidden;
 }
 
