--- a/src/components/Entry/stylesheet.css
+++ b/src/components/Entry/stylesheet.css
@@ -5,6 +5,7 @@
   flex-direction: column;
   height: 100%;
   min-height: calc(100vh - 30px); /* 30px for the header bar */
+  padding-bottom: 90px;
   overflow-x: hidden;
 }
 
