--- a/src/components/SyncServiceSignIn/stylesheet.css
+++ b/src/components/SyncServiceSignIn/stylesheet.css
@@ -5,16 +5,16 @@
   margin: 0;
 }
 
-#webdavLogin form {
+.sync-service-container form {
   display: table;
 }
-#webdavLogin p {
+.sync-service-container form p {
   display: table-row;
 }
-#webdavLogin label {
+.sync-service-container form label {
   display: table-cell;
 }
-#webdavLogin input {
+.sync-service-container form input {
   display: table-cell;
 }
 
