always show table edit buttons but don't have them do anything if no cell selected

--- a/src/components/OrgFile/components/TableEditorModal/components/TableActionButtons/stylesheet.css
+++ b/src/components/OrgFile/components/TableEditorModal/components/TableActionButtons/stylesheet.css
@@ -3,6 +3,7 @@
 .table-action-drawer {
   display: flex;
   justify-content: space-around;
+  min-height: '100px';
 }
 
 .table-action-drawer-container {
