--- a/src/components/OrgFile/components/SearchModal/stylesheet.css
+++ b/src/components/OrgFile/components/SearchModal/stylesheet.css
@@ -23,6 +23,8 @@
 
 .task-list__modal-title {
   width: 100%;
+  height: 20px;
   display: flex;
-  justify-content: space-between;
+  justify-content: right;
+  align-items: center;
 }
