--- a/src/components/OrgFile/components/TaskListModal/stylesheet.css
+++ b/src/components/OrgFile/components/TaskListModal/stylesheet.css
@@ -3,6 +3,14 @@
 /* Currently, the markup is the same as in the AgendaModal component.
  * Hence the CSS rules from there apply. */
 
+.task-list__modal-title {
+  width: 100%;
+  height: 20px;
+  display: flex;
+  justify-content: right;
+  align-items: center;
+}
+
 .task-list__filter-input {
   box-sizing: border-box;
   width: 100%;
