--- a/src/components/OrgFile/components/SearchModal/stylesheet.css
+++ b/src/components/OrgFile/components/SearchModal/stylesheet.css
@@ -25,6 +25,14 @@
   width: 100%;
   height: 20px;
   display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.task-list__modal-title_search {
+  width: 100%;
+  height: 20px;
+  display: flex;
   justify-content: right;
   align-items: center;
 }
