--- a/src/components/OrgFile/components/TaskListModal/stylesheet.css
+++ b/src/components/OrgFile/components/TaskListModal/stylesheet.css
@@ -7,7 +7,7 @@
   width: 100%;
   height: 20px;
   display: flex;
-  justify-content: right;
+  justify-content: space-between;
   align-items: center;
 }
 
