--- a/src/components/OrgFile/components/SearchModal/stylesheet.css
+++ b/src/components/OrgFile/components/SearchModal/stylesheet.css
@@ -24,6 +24,7 @@
 .task-list__modal-title {
   width: 100%;
   height: 20px;
+  min-height: 20px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -32,6 +33,7 @@
 .task-list__modal-title_search {
   width: 100%;
   height: 20px;
+  min-height: 20px;
   display: flex;
   justify-content: right;
   align-items: center;
