--- a/src/components/OrgFile/components/TaskListModal/stylesheet.css
+++ b/src/components/OrgFile/components/TaskListModal/stylesheet.css
@@ -6,6 +6,7 @@
 .task-list__modal-title {
   width: 100%;
   height: 20px;
+  min-height: 20px;
   display: flex;
   justify-content: space-between;
   align-items: center;
