option to not edit raw values

--- a/src/components/OrgFile/components/DrawerActionBar/components/DrawerActionButtons/stylesheet.css
+++ b/src/components/OrgFile/components/DrawerActionBar/components/DrawerActionButtons/stylesheet.css
@@ -1,5 +1,9 @@
 @import '../../../../../../colors.css';
 
+.drawer-action-button--selected {
+  color: var(--orange);
+}
+
 .header-action-drawer-container {
   color: var(--base01);
 
