--- a/src/components/OrgFile/components/FinderModal/components/TaskListModal/stylesheet.css
+++ b/src/components/OrgFile/components/FinderModal/components/TaskListModal/stylesheet.css
@@ -1,4 +1,4 @@
-@import '../../../../colors.css';
+@import '../../../../../../colors.css';
 
 /* Currently, the markup is the same as in the AgendaModal component.
  * Hence the CSS rules from there apply. */
