--- a/src/components/Landing/vendor_css/template.css
+++ b/src/components/Landing/vendor_css/template.css
@@ -1,4 +1,11 @@
 @charset "UTF-8";
+
+/* INFO: This file is taken from
+   https://200ok.ch/landing_page/css/styles.css and only slightly
+   adapted so that it compiles for React.
+   The template has been bought by 200ok llc from https://startbootstrap.com/previews/sb-ui-kit-pro
+*/
+
 /*!
  * Bootstrap v5.0.2 (https://getbootstrap.com/)
  * Copyright 2011-2021 The Bootstrap Authors
