--- a/src/components/Entry/stylesheet.css
+++ b/src/components/Entry/stylesheet.css
@@ -3,9 +3,8 @@
 
   display: flex;
   flex-direction: column;
-  height: calc(100vh - 50px);
-  min-height: calc(100vh - 50px);
-  max-height: calc(100vh - 50px);
+  height: 100%;
+  min-height: 100vh;
   overflow-x: hidden;
 }
 
