--- a/src/components/Entry/stylesheet.css
+++ b/src/components/Entry/stylesheet.css
@@ -3,8 +3,9 @@
 
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: 100vh;
   min-height: 100vh;
+  max-height: 100vh;
   overflow-x: hidden;
 }
 
