doc: Architecture Decision Record: Static Content Pages

--- a/src/components/Landing/vendor_css/template.scss
+++ b/src/components/Landing/vendor_css/template.scss
@@ -5,8 +5,10 @@
    adapted so that it compiles for React (some resources are 404s).
    Also, we have 'rewritten' it as SCSS, so that we can scope
    everything under '.landing-page', so that the styles do not bleed
-   through.
-   The template has been bought by 200ok llc from https://startbootstrap.com/previews/sb-ui-kit-pro
+   through. See adr-002 for details.
+
+   The template has been bought by 200ok llc from
+   https://startbootstrap.com/previews/sb-ui-kit-pro
 */
 
 /*!
