--- a/src/components/OrgFile/components/TitleEditorModal/stylesheet.css
+++ b/src/components/OrgFile/components/TitleEditorModal/stylesheet.css
@@ -1,21 +1,13 @@
 @import '../../../../colors.css';
 
-.todo-editor {
+.todo-container {
   display: flex;
-  flex-direction: row;
-  align-items: center;
+  justify-content: space-around;
+  flex-wrap: wrap;
   margin-top: -15px;
   margin-bottom: 10px;
   margin-right: 5px;
   margin-left: 5px;
-  justify-content: space-between;
-}
-
-.todo-container {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  flex-wrap: wrap;
 }
 
 .todo-editor__icon {
