Fixed rotation of table editor icons to reflect their action

--- a/src/components/OrgFile/components/TableEditorModal/components/TableActionButtons/stylesheet.css
+++ b/src/components/OrgFile/components/TableEditorModal/components/TableActionButtons/stylesheet.css
@@ -44,6 +44,18 @@
   transform: rotate(270deg);
 }
 
+.table-action-drawer__sub-icon--rotated270 {
+  transform: rotate(270deg);
+}
+
+.table-action-drawer__sub-icon--rotated180 {
+  transform: rotate(180deg);
+}
+
+.table-action-drawer__sub-icon--rotated90 {
+  transform: rotate(90deg);
+}
+
 .table-action-movement-container {
   color: var(--base01);
 
