change style of list item when it is selected

--- a/src/components/OrgFile/components/AttributedString/components/ListPart/stylesheet.css
+++ b/src/components/OrgFile/components/AttributedString/components/ListPart/stylesheet.css
@@ -13,3 +13,7 @@
 .list-part__checkbox-container {
   line-height: 22px;
 }
+
+.list-part__item--selected {
+  background-color: rgba(239, 255, 0, 0.28);
+}
