feat: Add visual cue for overdue headers when displaying headers
      Original PR by @dmorlitz: https://github.com/200ok-ch/organice/pull/970

--- a/src/components/OrgFile/components/Header/stylesheet.css
+++ b/src/components/OrgFile/components/Header/stylesheet.css
@@ -54,3 +54,11 @@
 .swipe-action-container__icon--right {
   left: 10px;
 }
+
+.header-deadline {
+  padding-right: 0.5em;
+}
+
+.header-deadline--overdue {
+  color: var(--red);
+}
