refactor: Rewrote TableEditorModal using Table component

--- a/src/components/OrgFile/components/Table/TableCell/stylesheet.css
+++ b/src/components/OrgFile/components/Table/TableCell/stylesheet.css
@@ -1,11 +1,12 @@
-@import '../../../../../../colors.css';
+@import '../../../../../colors.css';
 
 .table-part__cell {
   border: 1px solid var(--base01);
-
   white-space: pre;
-
   vertical-align: top;
+  min-width: 20px;
+  height: 20px;
+
 }
 
 .table-part__cell--selected {
