--- a/src/components/OrgFile/components/Table/TableCellEditContainer/stylesheet.css
+++ b/src/components/OrgFile/components/Table/TableCellEditContainer/stylesheet.css
@@ -1,4 +1,5 @@
-@import '../../../../../../colors.css';
+@import '../../../../../colors.css';
+
 
 .table-cell__edit-container {
   width: 100%;
@@ -16,3 +17,4 @@
 .insert-timestamp-icon {
   margin-right: 5px;
 }
+
