--- a/src/components/OrgFile/components/Table/stylesheet.css
+++ b/src/components/OrgFile/components/Table/stylesheet.css
@@ -1,9 +1,8 @@
-@import '../../../../colors.css';
-
 .table-part {
   align-self: center;
   border-collapse: collapse;
-  margin-top: 3px;
+  margin-top: 2.5px;
   margin-bottom: 3px;
+  empty-cells: show;
 }
 
